@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-03-25T08:09:02Z",
+  "timestamp" : "2022-03-26T00:32:47Z",
   "count_outdated" : 528,
   "uniques_outdated" : 32,
-  "count" : 605,
+  "count" : 613,
   "uniques" : 39,
   "views" : [
     {
@@ -49,8 +49,8 @@
     },
     {
       "timestamp": "2022-03-25T00:00:00Z",
-      "count": 6,
-      "count_minmax": [ 6, 6 ],
+      "count": 14,
+      "count_minmax": [ 6, 14 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
